For low cmake the RUNTIME_DEPENDENCY_SET is not support in `install` function. so I comment this function to avode making user have to upgrade their cmake.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -143,4 +143,4 @@ endif()
 
 
 #install
-install(TARGETS smr DESTINATION ${CMAKE_BINARY_DIR}/bin RUNTIME_DEPENDENCY_SET)
+#install(TARGETS smr DESTINATION ${CMAKE_BINARY_DIR}/bin RUNTIME_DEPENDENCY_SET)
