1) CMakelists.txt: When link staticlly, dl is needed too.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -119,7 +119,7 @@ if (CMAKE_HOST_SYSTEM_PROCESSOR STREQUAL "x86_64")
                 target_link_libraries(smr z gomp pthread)
             else()
                 message(WARNING "You now try to link libs staticlly, You need make sure all static lib was installed.")
-                target_link_libraries(smr -static z gomp pthread)
+                target_link_libraries(smr -static z gomp pthread dl)
             endif()
         elseif (CMAKE_C_COMPILER_ID STREQUAL "Clang")
             target_include_directories(smr PRIVATE ${zlib_include_dir} PRIVATE ${eigen_dir})
@@ -128,7 +128,7 @@ if (CMAKE_HOST_SYSTEM_PROCESSOR STREQUAL "x86_64")
                 target_link_libraries(smr z omp pthread)
             else()
                 message(WARNING "You now try to link libs staticlly, You need make sure all static lib was installed.")
-                target_link_libraries(smr -Wl,-Bstatic z omp -Wl,-Bdynamic)
+                target_link_libraries(smr -static z omp pthread dl)
             endif()
 
         endif()
